Fix music-display bug increasing it's z-index to 4, Add the intro layout to Giulia Playlist

--- a/source/giulia.css
+++ b/source/giulia.css
@@ -20,7 +20,7 @@
     position: absolute;
     width: 100%;
     height: 10px;
-    background: linear-gradient(to bottom, #e89a4ccb 25%, #121212 70%);
+    background: linear-gradient(to bottom, #e91c3ed2 25%, #121212 70%);
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     z-index: 1;
